<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DreamTools</string>
    <string name="app_version">1.5.2</string>
    <string name="company_name">MadibaSoft</string>

    <!-- Zap -->
    <string name="zap">Zap</string>
    <string name="no_title">Nothing running</string>

     <!-- Stream -->
    <string name="stream">Stream</string>
    
    <!-- Monitor -->
    <string name="monitor">Monitor</string>
    <string name="monitor_options">Monitor options</string>
        
    <!-- EPG -->
    <string name="epgDetails">EPG Info</string>
    <string name="startTime">Start</string>
    <string name="endTime">End</string>
    <string name="duration">Duration</string>

    <!-- Movies -->
    <string name="movies">Movies</string>

    <!-- Control -->
    <string name="control">Control</string>
    <string name="epgStart">Start</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="success_message">Message sent</string>
    <string name="success_timer">Added timer</string>
    <string name="add_timer">Add timer</string>
    <string name="add_record_timer">Add record timer</string>
    <string name="add_switch_timer">Add zap timer</string>
    <string name="error_no_epg">No channel information received</string>
    <string name="send_message_title">Send message</string>
    <string name="send_message_descr">Enter message text</string>
    <string name="standyby_toggle">Toggled standby</string>

    <!-- Media -->
    <string name="media">Media</string>

    <!-- Satfinder -->
    <string name="satfinder">Satfinder</string>
    <string name="zapEmpty">Please configure Zap channels in your settings</string>
    <string name="notset">Not set</string>
    <string name="noiseratio">Noise ratio :</string>
    <string name="ber">BER :</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="zap2">Zap to ...</string>
    <string name="cancelled">Action cancelled</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="dreambox_settings">Settings</string>
    <string name="hostname">Hostname</string>
    <string name="hostname_tip">Hostname or IP address</string>
    <string name="port">Port</string>
    <string name="port_tip">Port (default use 80)</string>
    <string name="credentials">Credentials</string>
    <string name="username">Username</string>
    <string name="username_tip">Username to authenticate with</string>
    <string name="password">Password</string>
    <string name="password_tip">Password of the user</string>
    <string name="satfinder_options">Satfinder options</string>
    <string name="setzap1">Set zap channel 1</string>
    <string name="setzap2">Set zap channel 2</string>
    <string name="setzap3">Set zap channel 3</string>
    <string name="setzap4">Set zap channel 4</string>
    <string name="show_text">Show text overlay</string>
    <string name="show_text_tip">Display signal strength value</string>
    <string name="graph_style">Graph style</string>
    <string name="graph_style_tip">Draw graph as bar or line</string>
    <string name="update_interval">Update interval</string>
    <string name="update_interval_tip">Delay between refreshes</string>
    <string name="misc_settings">Miscellaneous</string>
    <string name="sync_freq">Cache period</string>
    <string name="sync_freq_tt">When to refresh data</string>
    <string name="sync_always">Always</string>
    <string name="sync_hour">Hourly</string>
    <string name="sync_day">Daily</string>
    <string name="sync_week">Weekly</string>
    <string name="sync_month">Monthly</string>
    <string name="sync_never">Never expires</string>
    <string name="monitor_size">Monitor quality</string>
    <string name="monitor_size_tip">Size of screenshot image</string>
    <string name="monitor_small">Small (180p)</string>
    <string name="monitor_medium">Medium (360p)</string>
    <string name="monitor_large">Large (720p)</string>
    <string name="monitor_xlarge">XLarge (1440p)</string>
                
    <!-- Misc -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="sync_title">Please wait</string>
    <string name="sync_description">Loading</string>
    <string name="under_construction_title">Under construction</string>
    <string name="under_construction_description">Please be patient</string>
    <string name="loading">Loading</string>

    <!-- About -->
    <string name="about">About</string>
    <string name="by">by</string>
    <string name="rights">All rights reserved.</string>
    <string name="blurb">Developers please volunteer at http://code.google.com/p/dreamtool/</string>

</resources>