<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/dreambox_settings" >

        <EditTextPreference
            android:id="@+id/prefences_hostname"
            android:defaultValue="192.168.1.151"
            android:key="hostnamePref"
            android:name="@string/hostname"
            android:summary="@string/hostname_tip"
            android:title="@string/hostname" />

        <EditTextPreference
            android:id="@+id/prefences_port"
            android:defaultValue="80"
            android:key="portPref"
            android:name="@string/port"
            android:summary="@string/port_tip"
            android:title="@string/port" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/credentials" >

        <EditTextPreference
            android:id="@+id/prefences_username"
            android:defaultValue="root"
            android:key="usernamePref"
            android:name="@string/username"
            android:summary="@string/username_tip"
            android:title="@string/username" />

        <EditTextPreference
            android:defaultValue="dreambox"
            android:key="passwordPref"
            android:name="@string/password"
            android:password="true"
            android:summary="@string/password_tip"
            android:title="@string/password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/satfinder_options" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="drawTextPref"
            android:summary="@string/show_text_tip"
            android:title="@string/show_text" />

        <ListPreference
            android:defaultValue="true"
            android:entries="@array/graph_style"
            android:entryValues="@array/graph_style_values"
            android:key="stylePref"
            android:summary="@string/graph_style_tip"
            android:title="@string/graph_style" />

        <ListPreference
            android:defaultValue="250"
            android:entries="@array/graph_delay"
            android:entryValues="@array/graph_delay_values"
            android:key="delayPref"
            android:summary="@string/update_interval_tip"
            android:title="@string/update_interval" />

        <Preference
            android:key="zapChannel1Pref"
            android:summary="@string/notset"
            android:title="@string/setzap1" />

        <Preference
            android:key="zapChannel2Pref"
            android:summary="@string/notset"
            android:title="@string/setzap2" />

        <Preference
            android:key="zapChannel3Pref"
            android:summary="@string/notset"
            android:title="@string/setzap3" />

        <Preference
            android:key="zapChannel4Pref"
            android:summary="@string/notset"
            android:title="@string/setzap4" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/monitor_options" >

        <ListPreference
            android:defaultValue="360"
            android:entries="@array/monitor_size"
            android:entryValues="@array/monitor_size_values"
            android:key="monitor_size_Pref"
            android:summary="@string/monitor_size_tip"
            android:title="@string/monitor_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc_settings" >

        <ListPreference
            android:defaultValue="604800000"
            android:entries="@array/sync_prefs"
            android:entryValues="@array/sync_prefs_values"
            android:key="syncDelay"
            android:summary="@string/sync_freq_tt"
            android:title="@string/sync_freq" />
    </PreferenceCategory>

</PreferenceScreen>