<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/epgServiceTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="xxxxx"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/epgChannelTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="xxxxx" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/startTime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/epgStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="5dip"
            android:text="0:00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/endTime"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/epgEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="5dip"
            android:text="00:00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/duration"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/epgDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="5dip"
            android:text="00:00" />
    </LinearLayout>

    <TextView
        android:id="@+id/epgServiceDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>