<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Name" />

        <EditText
            android:id="@+id/timerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/currentService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Description" />

        <EditText
            android:id="@+id/timerDescription"
            android:layout_width="match_parent"
            android:layout_height="50dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_record_timer" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radioZap"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_switch_timer" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rounded"
            android:orientation="vertical"
            android:padding="4dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/startTime" />

                <TextView
                    android:id="@+id/selectedStartTime"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="4"
                    android:text="--/-- --/--/--"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <kankan.wheel.widget.WheelView
                    android:id="@+id/startHour"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/startMinute"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/startDay"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/startMonth"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/startYear"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_rounded"
            android:orientation="vertical"
            android:padding="4dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/endTime" />

                <TextView
                    android:id="@+id/selectedEndTime"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="4"
                    android:text="--/-- --/--/--"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <kankan.wheel.widget.WheelView
                    android:id="@+id/endHour"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text=":" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/endMinute"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/endDay"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/endMonth"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/endYear"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="okView"
                android:text="OK" />

            <Button
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelView"
                android:text="Cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>